--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ build veebiprojekt-frontend:
   tags:
     - frontend
   script:
+    - npm install
     - docker build -t veebiprojekt-frontend .
 
 deploy veebiprojekt-frontend:
